--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
 
     <uses-feature
-        android:name="android.hardware.camera"/>
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
 
     <uses-permission android:name="android.permission.CAMERA"/>
 
