MSFragmentTestH264: handling receivers and servers when fragment is paused or resumed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".camera.service.MSServiceStream"/>
+        <service android:name=".system.service.MSServiceStream"/>
 
     </application>
 
