--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,16 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA"/>
 
     <application
         android:name=".MSApp"
@@ -28,7 +38,11 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".system.service.MSServiceStream"
+        <service android:name=".system.service.serv.MSServiceStream"
+            android:exported="false"/>
+
+        <service android:name=".system.service.serv.MSServiceStreamForeground"
+            android:foregroundServiceType="camera"
             android:exported="false"/>
 
     </application>
